--- a/photographer.html
+++ b/photographer.html
@@ -1,36 +1,100 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="./css/style.css" rel="stylesheet" type="text/css" />
+    <link href="./css/photographer.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="icon" type="image/png" href="./assets/favicon.png">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <script type="module" src="./js/main.js"></script>
     <title>Fisheye - photographe </title>
   </head>
   <body>
-    <header>
-      <img src="assets/images/logo.png" class="logo" />
+    <header role="banner" id="banner">
+        <a href="index.html" title="HomePage"><img
+                src="./assets/images/logo.png"
+                alt="FishEye Home Page"></a>
     </header>
-    <main id="main">
-      <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
-      </div>
-    </main>
-    <div id="contact_modal">
-			<div class="modal">
-				<header>
-          <h2>Contactez-moi</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
+    <main>
+        <!-- HEADER -->
+        <header id="ph-profil" aria-label="photographer information">
+            <section id="ph-profil-header"></section>
         </header>
-				<form>
-					<div>
-						<label>Prénom</label>
-						<input />
-					</div>
-          <button class="contact_button">Envoyer</button>
-				</form>
-			</div>
-		</div>
-    <script src="/scripts/utils/contactForm.js"></script>
-  </body>
+
+        <!-- DROPDOWN -->
+        <div class="dropdown">
+            <span id="sort-by">Trier par</span>
+            <div id="sort-wrapper">
+                <button aria-haspopup="listbox" class="sort-btn" >Popularité</button>
+                <span class="fas fa-chevron-down arrow-down-open" role='button'></span>
+                <ul class="hidden-sort" role="listbox">
+                    <li class="sort" role='option'>Popularité <span class="fas fa-chevron-up arrow-up-close"></span>
+                    </li>
+                    <li class="sort" role='option'>Date</li>
+                    <li class="sort" role='option'>Tître</li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- WORK -->
+        <section id='ph-works' aria-label='photographer works'></section>
+
+        <!-- BOX -->
+        <div id="box" aria-label="photographer likes & price"></div>
+
+        <!--MODAL-->
+        <div role="dialog" id="form-dialog" aria-label="contact me form" aria-labelledby="form-title"
+            aria-hidden="true">
+            <form action="photographer-page.html" method="POST" id="contact-form">
+                <header aria-label="contact form header">
+                    <h1 id="form-title">
+                        <span>Contactez-moi</span><br>
+                        <span id="contact-form-name"></span>
+                    </h1>
+                    <button id="close-btn" title="Close form" type="button">
+                        <span class="fas fa-times close-form-icon" aria-hidden="true"></span>
+                    </button>
+                </header>
+                <!-- FIRST NAME INPUT-->
+                <div class="formData" data-error="Vous devez entrer votre prénom." data-error-visible="false">
+                    <label for="first-name" id="label-firstname">Prénom</label>
+                    <input name="first-name" id="first-name" aria-labelledby="label-firstname" placeholder="Prénom">
+                </div>
+                <!-- LAST NAME INPUT-->
+                <div class="formData" data-error="Vous devez entrer votre nom." data-error-visible="false">
+                    <label for="last-name" id="label-lastname">Nom</label>
+                    <input name="last-name" id="last-name" aria-labelledby="label-lastname" placeholder="Nom">
+                </div>
+                <!-- EMAIL INPUT -->
+                <div class="formData" data-error="Vous devez entrer un email valide." data-error-visible="false">
+                    <label for="email" id="label-email">Email</label>
+                    <input type="email" name="email" id="email" aria-labelledby="label-email"
+                        placeholder="exemple@email.com">
+                </div>
+                <!-- MESSAGE INPUT-->
+                <div class="formData" data-error="Vous devez entrer votre message." data-error-visible="false">
+                    <label for="message" id="label-message">Votre message</label>
+                    <textarea name="message" id="message" cols="20" rows="5" aria-labelledby="label-message"
+                        placeholder="Votre message..."></textarea>
+                </div>
+                <!-- SUBMIT -->
+                <input type="submit" value="Envoyer" class="form-submit" title="Send">
+            </form>
+        </div>
+
+        <!--LIGHTBOX-->
+        <aside id="works-lightbox" aria-hidden="true">
+            <article id="lightbox-body" role='dialog'>
+                <span class="fas fa-times close-lightbox-icon" role="button" title="Close dialog"></span>
+                <span class="fas fa-chevron-left left-arrow-lightbox" role="button" title="Previous image"></span>
+                <span class="fas fa-chevron-right right-arrow-lightbox" role="button" title="Next image"></span>
+                <div id="works-lightbox-media"></div>
+                <div id="works-lightbox-name"></div>
+            </article>
+        </aside>
+    </main>
+
+</body>
 </html>
