--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <main>
         <!-- PHOTOGRAPHERS -->
         <section id="photographers" aria-label="photographers">
+            <!-- IMPORT ALL PHOTOGRAPHERS FROM JSON'S FILE -->
         </section>
     </main>
 
